Handle even more type fails.